--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 body {
   /* background: color image repeat position/size */
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -35,7 +36,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto;
   padding: 0 24px;
 }
@@ -158,4 +160,14 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/background-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/background-desktop-light.jpg);
+  }
 }
